<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F7F7F7">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_height="match_parent" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="#ffffff"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_marginTop="5dp"

                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:id="@+id/order_management_item_details_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="#747675"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                />
                            <TextView
                                android:id="@+id/order_management_item_details_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="#747675"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/order_management_item_details_address"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:textColor="#747675"
                            />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_height="1dp"
                            android:background="#EBEBEB"
                            />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/order_need"
                            android:textColor="#747675"
                            />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:id="@+id/order_management_item_details_timetosend"

                                android:text="@string/time_to_send"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="#747675"
                                />
                            <TextView
                                android:id="@+id/order_management_item_details_gettime"
                                android:text="@string/appointment_to_send"
                                android:layout_alignParentRight="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="#747675"
                                />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:id="@+id/order_management_item_details_provide_the_invoice"

                                android:text="@string/provide_the_invoice"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="#747675"
                                />
                            <TextView
                                android:id="@+id/order_management_item_details_commercial_invoice"
                                android:text="@string/commercial_invoice"
                                android:layout_alignParentRight="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="#747675"
                                />
                        </RelativeLayout>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_height="1dp"
                            android:background="#EBEBEB"
                            />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/order_list"
                            android:textColor="#747675"
                            />
                        <com.merchants.main.View.Listview.MyGridView
                            android:id="@+id/order_management_item_details_grid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:numColumns="2"
                            android:scrollbars="none"
                            android:verticalSpacing="5dp"
                            />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_height="1dp"
                            android:background="#EBEBEB"
                            />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/order_note"
                            android:textColor="#747675"
                            />
                        <TextView
                            android:id="@+id/order_note_detail"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_marginBottom="5dp"
                            android:textColor="#747675"
                            />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#EBEBEB"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#EBEBEB"
                    />
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp"
                    android:id="@+id/order_management_item_details_finish"
                    android:clickable="true"
                    android:background="@drawable/background_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_finish"
                        android:textSize="18sp"
                        android:textColor="#96CC7A"
                        android:layout_centerInParent="true"
                        />


                </RelativeLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#EBEBEB"
                    />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5E6B85"

        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/order_management_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:id="@+id/order_management_details_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/order_management_details_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#ffffff"
            />
        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/order_management_details_totalmoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:text="@string/pay_treasure"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>