<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F2">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignee"
                    android:textColor="#999999"
                    android:textSize="15.75sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="22.5dp"/>

                <EditText
                    android:id="@+id/et_addname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6">
            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumber"
                    android:textColor="#999999"
                    android:textSize="15.75sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="22.5dp"/>

                <EditText
                    android:id="@+id/et_addnumber"
                    android:inputType="number"
                    android:phoneNumber="true"
                    android:maxLength="11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="44.25dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6">
            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="#999999"
                    android:textSize="15.75sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="22.5dp"/>

                <EditText
                    android:id="@+id/et_addaddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="44.25dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6">
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/ll_delete"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="45dp"
                android:background="#ffffff"
                android:clickable="true"
                android:visibility="invisible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="删除送货地址"
                    android:textColor="#e52e2e"
                    android:textSize="15.75sp"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
